--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,7 +3,9 @@
 * {
   margin: 0px;
 }
-
+.text-white{
+  color: white !important;
+}
 body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
@@ -100,6 +102,7 @@ img {
 
 .mt-2 {
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .mt-3 {
@@ -243,6 +246,7 @@ img {
 .card {
   width: 100%;
   height: 220px;
+  cursor: pointer;
 }
 
 .card:hover {
@@ -317,6 +321,7 @@ img {
   background: rgba(22, 158, 0, 1);
   transition: 0.2s;
   color: #fff;
+  cursor: pointer;
 }
 
 .box:hover .circle {
@@ -394,6 +399,7 @@ footer img {
 
 .about-card {
   /* width: calc(100%  / 3); */
+  cursor: pointer;
 }
 
 .about-card img {
@@ -481,4 +487,5 @@ footer img {
 }
 input.form-control.btn {
   background: rgba(0, 42, 150, 1);
+  cursor: pointer;
 }
